Updated using Colab

--- a/Spaceship_Titanic_Competition.ipynb
+++ b/Spaceship_Titanic_Competition.ipynb
@@ -10,7 +10,7 @@
         "-eC3jofvyENM",
         "qYSEHc2UyAuI"
       ],
-      "authorship_tag": "ABX9TyPuBqcmCk9HQDOMhy74BthP"
+      "authorship_tag": "ABX9TyNU9QQpccBKiidudWpDqJUA"
     },
     "kernelspec": {
       "name": "python3",
@@ -24,42 +24,35 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Data PreProcessing"
+        "### Importing the Dataset from Kaggle"
       ],
       "metadata": {
-        "id": "AV5hKZ6kMkxs"
+        "id": "to-WfsLZ6AET"
       }
     },
     {
       "cell_type": "code",
-      "source": [
-        "import pandas as pd"
-      ],
-      "metadata": {
-        "id": "YQFSEeaKDjW_"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "ZXMUbiSm6V38",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f0ddbfd3-b273-47bc-f223-09a671128331"
+        "outputId": "62bdc426-3fe5-4cd2-9567-0466b529d5ed"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Warning: Your Kaggle API key is readable by other users on this system! To fix this, you can run 'chmod 600 /root/.config/kaggle/kaggle.json'\n",
-            "Downloading spaceship-titanic.zip to /content\n",
-            "  0% 0.00/299k [00:00<?, ?B/s]\n",
-            "100% 299k/299k [00:00<00:00, 508MB/s]\n"
+            "Traceback (most recent call last):\n",
+            "  File \"/usr/local/bin/kaggle\", line 4, in <module>\n",
+            "    from kaggle.cli import main\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/kaggle/__init__.py\", line 6, in <module>\n",
+            "    api.authenticate()\n",
+            "  File \"/usr/local/lib/python3.11/dist-packages/kaggle/api/kaggle_api_extended.py\", line 434, in authenticate\n",
+            "    raise IOError('Could not find {}. Make sure it\\'s located in'\n",
+            "OSError: Could not find kaggle.json. Make sure it's located in /root/.config/kaggle. Or use the environment method. See setup instructions at https://github.com/Kaggle/kaggle-api/\n"
           ]
         }
       ],
@@ -92,6 +85,31 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Exploratory Data Analysis"
+      ],
+      "metadata": {
+        "id": "kApQiDo36KA-"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "\n",
+        "# Setting Seaborn style\n",
+        "sns.set(style='whitegrid')"
+      ],
+      "metadata": {
+        "id": "YQFSEeaKDjW_"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1720,6 +1738,227 @@
     {
       "cell_type": "code",
       "source": [
+        "#Combining dataset for combined EDA Visuals\n",
+        "combined = pd.concat([train_data, test_data], sort=False)"
+      ],
+      "metadata": {
+        "id": "-bT-kJzBlvk6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Count Plot of Transported (Target Variable)**"
+      ],
+      "metadata": {
+        "id": "LXD4rwB4m3sC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(figsize=(6,4))\n",
+        "sns.countplot(x='Transported', data=combined)\n",
+        "plt.title('Transported Distribution')\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "vm46mNnIlvLy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Categorical Column Distributions vs Transported**"
+      ],
+      "metadata": {
+        "id": "VudvAnv7m_1W"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(figsize=(6,4))\n",
+        "sns.countplot(x='HomePlanet', hue='Transported', data=combined)\n",
+        "plt.title('HomePlanet vs Transported')\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "cI9KQzvWlvE3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(figsize=(6,4))\n",
+        "sns.countplot(x='Destination', hue='Transported', data=combined)\n",
+        "plt.title('Destination vs Transported')\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "lAd_OpTNlu-x"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(figsize=(6,4))\n",
+        "sns.countplot(x='VIP', hue='Transported', data=combined)\n",
+        "plt.title('VIP vs Transported')\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "W7XCZ5Rklu6u"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**CryoSleep vs Transported**"
+      ],
+      "metadata": {
+        "id": "Z7EGlbKxnS39"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(figsize=(6,4))\n",
+        "sns.countplot(x='CryoSleep', hue='Transported', data=combined)\n",
+        "plt.title('CryoSleep vs Transported')\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "Qf3q_OMGnXf9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Age Distribution by Transported**"
+      ],
+      "metadata": {
+        "id": "vnySpG3Kndob"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(figsize=(8,5))\n",
+        "sns.histplot(data=combined, x='Age', hue='Transported', bins=30, kde=True)\n",
+        "plt.title('Age Distribution by Transported')\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "XESy0KbInXOJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Boxplot for Spending Features (e.g., RoomService)**"
+      ],
+      "metadata": {
+        "id": "oyFpIJX8nmAB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(figsize=(8,5))\n",
+        "sns.boxplot(data=combined, x='Transported', y='RoomService')\n",
+        "plt.title('RoomService Spend by Transported')\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "NSeb26rSnlEs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Correlation Heatmap of Numeric Features**"
+      ],
+      "metadata": {
+        "id": "IWJJIwOlnxCJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Make a copy to avoid modifying original\n",
+        "numeric_data = combined.copy()\n",
+        "\n",
+        "# Convert boolean to int\n",
+        "numeric_data['Transported'] = numeric_data['Transported'].astype(int)\n",
+        "numeric_data['CryoSleep'] = numeric_data['CryoSleep'].astype(int)\n",
+        "numeric_data['VIP'] = numeric_data['VIP'].astype(int)\n",
+        "\n",
+        "# Select numeric features\n",
+        "corr = numeric_data[['Age', 'RoomService', 'FoodCourt', 'ShoppingMall', 'Spa', 'VRDeck', 'CryoSleep', 'VIP', 'Transported']].corr()\n",
+        "\n",
+        "plt.figure(figsize=(10,8))\n",
+        "sns.heatmap(corr, annot=True, cmap='coolwarm', linewidths=0.5)\n",
+        "plt.title('Correlation Heatmap')\n",
+        "plt.show()\n"
+      ],
+      "metadata": {
+        "id": "AzrVl-U1nXCE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Pairplot for Main Spending Columns**"
+      ],
+      "metadata": {
+        "id": "rXUFlYBEoUm3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "spend_cols = ['RoomService', 'FoodCourt', 'ShoppingMall', 'Spa', 'VRDeck', 'Transported']\n",
+        "sns.pairplot(combined[spend_cols], hue='Transported', diag_kind='kde')\n",
+        "plt.suptitle('Pairwise Spending Feature Relationships', y=1.02)\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "ZCdLUZXZnWRo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Data PreProcessing"
+      ],
+      "metadata": {
+        "id": "AV5hKZ6kMkxs"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#Cater missing values in training dataset\n",
         "train_data['HomePlanet'] = train_data['HomePlanet'].fillna(train_data['HomePlanet'].mode()[0])    # [0]\tGets the first mode value from the result, so you're filling missing values with the most common category."
       ],
@@ -3114,15 +3353,22 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "*Convert object type to proper boolean (As the type were object*"
+      ],
+      "metadata": {
+        "id": "6Z02Kl1rxsuB"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "\n",
-        "# Convert object type to proper boolean\n",
         "X_train = X_train.astype(bool)\n",
         "X_val = X_val.astype(bool)\n",
         "\n",
         "y_train = y_train.astype(bool)\n",
-        "y_val = y_val.astype(bool)\n"
+        "y_val = y_val.astype(bool)"
       ],
       "metadata": {
         "id": "HSbdXW34n0gW"
